# libitl-gobject

./: ChangeLog  Makefile.am  NEWS  README  autogen.sh  configure.ac  itl-gobject.c  itl-gobject.h  libitl-gobject.pc.in  test.js
src/: itl-gobject-enums.c.in  itl-gobject-enums.h.in  itl-gobject.c
